--- a/unbounded/templates/index.html
+++ b/unbounded/templates/index.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<meta charset="utf-8">
-<title>{% block title %}{% endblock %} - unbounded</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+{% extends 'base.html' %}
 
-  <nav>
-    <h1>Riddled Road</h1>
-    <ul>
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    </ul>
-  </nav>
+{% block header %}
+  <h1>{% block title %}Riddled Road your fate awaits!{% endblock %}</h1>
+{% endblock %}
 
-  <section class="content">
-
-    <header>
-      {% block header %}{% endblock %}
-    </header>
-
-    {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-    {% endfor %}
-
-    {% block content %}{% endblock %}
-  </section>
+{% block content %}
+  <p>hello word!<p>
+{% endblock %}
