removed ! at beggining of base html

--- a/unbounded/templates/base.html
+++ b/unbounded/templates/base.html
@@ -1,12 +1,12 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <title>{% block title %}{% endblock %} - unbounded</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 <nav>
   <h1>Riddled Road</h1>
   <ul>
-    <li><a href="{{ url_for('auth.register') }}">Register</a>
-    <li><a href="{{ url_for('auth.login') }}">Log In</a>
+    <li><a href="#">Register</a>
+    <li><a href="#">Log In</a>
   </ul>
 </nav>
 
